cp project/force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <description>Quotation price sheet shared with customer. Accepted quote converts to booking.</description>
    <label>Quotation</label>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>Quotation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>