cp project/force-app/main/default/objects/Quotation__c/fields/Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Area_Sq_Ft__c</fullName>
    <label>Area (Sq.Ft.)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>