cp project/force-app/main/default/objects/Quotation__c/fields/Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount__c</fullName>
    <label>Booking Advance Amount (e.g. 5%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>