cp project/force-app/main/default/objects/Quotation__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>