cp project/force-app/main/default/objects/Quotation__c/fields/Final_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Final_Property_Value__c</fullName>
    <label>Final Property Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>