cp project/force-app/main/default/objects/Quotation__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Payment</fullName>
                <default>true</default>
                <label>Self Payment</label>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Part Self + Part Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>