cp project/force-app/main/default/objects/Quotation__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Payment Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Payment Plan</fullName>
                <default>true</default>
                <label>Standard Payment Plan</label>
            </value>
            <value>
                <fullName>Custom Payment Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>