cp project/force-app/main/default/objects/Quotation__c/fields/Price_per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Sq_Ft__c</fullName>
    <label>Price per Sq.Ft.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>