cp project/force-app/main/default/objects/Quotation__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Tower</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>