cp project/force-app/main/default/objects/Quotation__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <label>Unit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>