cp project/force-app/main/default/objects/Quotation__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>